--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,23 @@
 @font-face {
     font-family: 'Honduro';
-    src: url('assets/fonts/Honduro.ttf') format('truetype');
+    src: url('assets/fonts/honduro.woff2') format('woff2'),
+         url('assets/fonts/honduro.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Poppins';
-    src: url('assets/fonts/Poppins-Regular.ttf') format('truetype');
+    src: url('assets/fonts/Poppins-Regular.woff2') format('woff2'),
+         url('assets/fonts/Poppins-Regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Poppins';
-    src: url('assets/fonts/Poppins-SemiBold.ttf') format('truetype');
+    src: url('assets/fonts/Poppins-SemiBold.woff2') format('woff2'),
+         url('assets/fonts/Poppins-SemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
 }
