--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@
     --white: #fff;
     --black: #000;
     --font-sans: 'Poppins', sans-serif;
-    --font-title: 'Honduro', Arial, sans-serif;}
+    --font-title: 'Honduro', 'Comic Sans MS', cursive;}
 
 /* Reset y estilos globales */
 *, *::before, *::after {
