--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 @font-face {
     font-family: 'Honduro';
-    src: url('/assets/fonts/Honduro.woff2') format('woff2'),
-         url('/assets/fonts/Honduro.woff') format('woff');
+    src: url('/assets/fonts/honduro.woff2') format('woff2'),
+         url('/assets/fonts/honduro.woff') format('woff'),
+         url('/assets/fonts/honduro.otf') format('opentype');
     font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Poppins';
-    src: url('/assets/fonts/Poppins-Regular.woff2') format('woff2'),
-         url('/assets/fonts/Poppins-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Poppins';
-    src: url('/assets/fonts/Poppins-SemiBold.woff2') format('woff2'),
-         url('/assets/fonts/Poppins-SemiBold.woff') format('woff');
-    font-weight: 600;
     font-style: normal;
 }
 
@@ -36,8 +23,9 @@
     --dark: #222;
     --white: #fff;
     --black: #000;
-    --font-sans: 'Poppins', sans-serif;
-    --font-title: 'Honduro', 'Comic Sans MS', cursive;}
+    --font-sans: 'Poppins', 'Impact', sans-serif;
+    --font-title: 'Honduro', 'Impact', sans-serif;
+}
 
 /* Reset y estilos globales */
 *, *::before, *::after {
@@ -60,7 +48,7 @@ body {
 /* Hero */
 .hero-bg {
     position: relative;
-    background-image: url('ruta/a/tu/imagen/hln-bg-large.webp');
+    background-image: url('assets/img/hln-bg-large.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -234,7 +222,7 @@ h2 {
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-image: url('../assets/img/hln-bg-large.webp'); /* Imagen por defecto */
+    background-image: url('../assets/img/hln-bg-large.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -253,7 +241,6 @@ h2 {
         background-image: url('../assets/img/hln-bg-small.webp') !important;
     }
 }
-
 
 /* Secciones de contenido */
 .content-section {
@@ -434,7 +421,6 @@ h2 {
 
 /* Media Queries */
 @media (max-width: 576px) {
-
     body {
         font-size: 1rem;
     }
